--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,6 @@ layout: default
 
   <hr><br/>
 
-  {% webmentions page.url | prepend: site.baseurl %}
+  <!--{% webmentions page.url | prepend: site.baseurl %}-->
 
 </div>
