--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -23,6 +23,11 @@
     }
 }
 
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
+
 .site-nav {
     float: right;
     line-height: 56px;
